2013-01-05
* tag statically linked ELF files and display them in the GUI
* tag version 11.0

2013-01-04
* rename more databases in ranking.py
* licenses database now needs to be specified separately

2013-01-03
* give extra hints to squashfs unpacking, so it is possible to do better
filtering.
* don't overwrite picklefile if it already exists. This was causing display
issues in the GUI, since some information would be lost.
* add strings of renamed packages together to increase accurace in ranking.
Uses a new configuration BAT_CLONE_DB

2013-01-02
* fix loop packing results in ranking.py that potentially has a big
performance impact

2012-12-30
* change name of some databases in ranking code: remove "SQLITE_" to make
things a bit less verbose.

2012-12-29
* change default setting for multiprocessing to 'yes'

2012-12-27
* BAT 10.0 released

2012-12-16
* batchextractprogramstrings.py: distribute tasks over available workers
differently to make it less likely that one worker gets all the big tasks.

2012-12-15
* bat/fwunpack.py: let unpackFile handle lengths properly, only when offset ==
0. Only used in ZIP unpacking at the moment.
* fix ZIP unpacking in case there is a single ZIP file, with trailing data.
* add script to regenerate LIST from a database. This is convenient in case
the analysis needs to be rerun (due to errors in scanning, crashed harddisk,
etc.)
* change parameters for verifylist.py
* extract a lot more info in batchextractprogramstrings.py

2012-12-14
* support 'temporary' files in bruteforcescan.py. This is needed for XOR
'decryption'.
* add a preliminary implementation of XOR 'decryption'. There is a risk of
getting into an endless loop, so the scan is disabled by default.
* deduplicate postrunscans

2012-12-10
* add another variant of squashfs where only the identifier was changed. Code
is a bit inefficient and could use some cleanups.

2012-12-08
* add variant of generatelist.py that reads a directory full of SRPMs,